// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkLabel snapshot renders 1`] = `
<AutosizeInput
  injectStyles={true}
  inputClassName=""
  inputRef={[Function]}
  minWidth={1}
  onChange={[Function]}
  style={
    Object {
      "left": "-0.5625em",
      "pointerEvents": "auto",
      "position": "fixed",
      "top": "-0.5625em",
    }
  }
/>
`;

exports[`MarkLabel snapshot renders 2`] = `
<AutosizeInput
  injectStyles={true}
  inputClassName=""
  inputRef={[Function]}
  minWidth={1}
  onChange={[Function]}
  style={
    Object {
      "left": "0em",
      "pointerEvents": "auto",
      "position": "fixed",
      "top": "0em",
    }
  }
/>
`;
